--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,11 +8,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.dalydays.android.fullvolumetext.MainActivity">
 
+    <Button
+        android:id="@+id/btn_pick_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pick_contact_button_text"/>
+
     <TextView
+        android:id="@+id/tv_contact_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SMS message says..."
-        android:id="@+id/sms_message_text_view"/>
-</RelativeLayout>
+        android:text="somedemotext"/>
+</LinearLayout>
