--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.dalydays.android.textecutor.MainActivity">
 
     <Button
-        android:id="@+id/btn_pick_contact"
+        android:id="@+id/btn_add_authorized_contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pick_contact_button_text"/>
+        android:text="@string/add_contact_button_text" />
 
-    <TextView
-        android:id="@+id/tv_contact_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="somedemotext"/>
+    <ListView
+        android:id="@+id/allowed_contacts_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
