--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,6 +15,7 @@
         android:textColor="#2B3D4D"
         tools:text="John Smith"/>
     <TextView
+        android:id="@+id/tv_contact_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
