Start updating layout for action list

--- a/app/src/main/res/layout/action_list_item.xml
+++ b/app/src/main/res/layout/action_list_item.xml
@@ -1,26 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_contact_name"
+        android:id="@+id/tv_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="#2B3D4D"
-        tools:text="John Smith"/>
+        tools:text="Beep Action" />
+
     <TextView
-        android:id="@+id/tv_contact_number"
+        android:id="@+id/tv_action_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="#2B3D4D"
-        tools:text="555-464-7878"/>
+        tools:text="makes your phone go beep" />
 
 </LinearLayout>
